Closed Bug 1883370 Opened 7 months ago Closed 7 months ago

[Windows] XUL notification does not stay frontmost (it can now be hidden behind other windows)

Categories

(Core :: Widget: Win32, defect)

Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
125 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox123 --- wontfix
firefox124 --- verified
firefox125 --- verified

People

(Reporter: saschanaz, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Managing window properly is hard 🥲

Just got a report from a user that their notification now goes behind other windows, and mozregression says it's a regression from bug 1870512.

Flags: needinfo?(emilio)

Set release status flags based on info from the regressing bug 1870512

Daniel, can we please get Priority/Severity settings applied here? It will help with release management triage.

Flags: needinfo?(dholbert)

(In reply to Kagami [:saschanaz] (they/them) from comment #0)

Just got a report from a user that their notification now goes behind other windows

Do we have any more info on environment (i.e. affected system configurations) and/or STR?

Flags: needinfo?(krosylight)

(In reply to Daniel Holbert [:dholbert] from comment #3)

(In reply to Kagami [:saschanaz] (they/them) from comment #0)

Just got a report from a user that their notification now goes behind other windows

Do we have any more info on environment (i.e. affected system configurations) and/or STR?

Yup.

  1. On Windows 11, set alerts.useSystemBackend=false
  2. Open https://www.bennish.net/web-notifications.html
  3. Click Authorize and then Show
  4. Bring some other window over the notification and see if it goes behind the window
Flags: needinfo?(krosylight)

Thanks. I can repro. Tentatively classifying as S3, in part given that it's a non-default configuration (requiring an about:config flip).

Just chatted with Emilio and he thinks it's a pretty easy fix, though.

Severity: -- → S3
Flags: needinfo?(dholbert)
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/83be82982f3b Use WS_EX_TOPMOST for alerts. r=saschanaz
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox124 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

Comment on attachment 9389707 [details]
Bug 1883370 - Use WS_EX_TOPMOST for alerts. r=#win-reviewers,saschanaz

Beta/Release Uplift Approval Request

  • User impact if declined: Comment 0
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 4
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): One-liner
  • String changes made/needed: none
  • Is Android affected?: No
Flags: needinfo?(emilio)
Attachment #9389707 - Flags: approval-mozilla-beta?
Flags: qe-verify+

:emilio this doesnt graft cleanly, do we also need bug 1880394?

Flags: needinfo?(emilio)
Attachment #9390058 - Flags: approval-mozilla-beta?

Uplift Approval Request

  • Code covered by automated testing: no
  • Risk associated with taking this patch: low
  • Needs manual QE test: yes
  • Explanation of risk level: one-liner
  • Is Android affected?: no
  • Fix verified in Nightly: yes
  • String changes made/needed: none
  • Steps to reproduce for manual QE testing: comment 4
  • User impact if declined: comment 0

Comment on attachment 9389707 [details]
Bug 1883370 - Use WS_EX_TOPMOST for alerts. r=#win-reviewers,saschanaz

Rebased version above.

Flags: needinfo?(emilio)
Attachment #9389707 - Flags: approval-mozilla-beta?
Attachment #9390058 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Reproduced the issue with Firefox 125.0a1 (2024-03-10) on Windows 10x64 and 11 by following steps from comment 4. The notification window goes behind other windows (Control Panel, Folder, Mail Windows application).

The issue is verified fixed with Firefox 125.0a1 (2024-03-10) and 124.0b9 on Windows 10x64 and 11 using the same steps. The notification remains on top after trying to hide it with other windows.

However, I can still see this issue happening on macOS 12 and Ubuntu 23.10 Wayland with fixed builds by using steps from comment 4. On macOS 12 this issue is not reproducible with Firefox 123.0a1 (2023-12-18), a build before the regressor (bug 1870512) but the issue reproduces on Ubuntu 23.10 with a build before the regressor (bug 1870512), so on Ubuntu 23.10 this may be happening for a long time. Should I file separate issues for macOS and Ubuntu 23.10 and close this one as verified for Windows only? Thank you in advance!

Status: RESOLVED → VERIFIED
Has STR: --- → yes
QA Whiteboard: [qa-triaged]
Flags: qe-verify+ → needinfo?(emilio)

Sorry for the spam, I mistakenly modified the statuses.

Status: VERIFIED → RESOLVED
Closed: 7 months ago7 months ago

Yes, please, that sounds gret.

Flags: needinfo?(emilio)

Thank you! I opened bug 1884635 for macOS which is a regression from bug 1870512 and bug 1884637 for Ubuntu, but on Ubuntu 23,10, this issue is not a regression from bug 1870512. Closing this for Windows only based on the above comments.

Status: RESOLVED → VERIFIED
OS: Unspecified → Windows
Hardware: Unspecified → Desktop
See Also: → 1884635, 1884637
Summary: XUL notification does not stay frontmost (it can now be hidden behind other windows) → [Windows] XUL notification does not stay frontmost (it can now be hidden behind other windows)
Component: Layout → Widget: Win32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: