Bug 1883370 - Use WS_EX_TOPMOST for alerts. r=saschanaz

Differential Revision: https://phabricator.services.mozilla.com/D203774